WIP Paper: - add tests to cglib proxied beans